--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,23 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root{
+  --color-dark:#27292a;
+  --color-darkest:#1f2122;
+  --color-silver:#6f6a60;
+  --color-dark-gold:#e09814;
+  --color-light:white;
+  --color-gold: #EBCD94;
+  --color-bg-body:var(--color-darkest);
+  --distance-primary:50px;
+  --padding-primary:var(--distance-primary);
+  --margin-primary:var(--distance-primary);
+  --border-radius-primary:calc(var(--distance-primary)/2);
+} 
+
+body{
+  background-color: var(--color-bg-body);
+  font-family:'Times New Roman', Times, serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+*::selection{
+  background-color: var(--color-dark-gold);
+  color: var(--color-darkest);
 }
